# grounds

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
app/: globals.css  layout.tsx  page.tsx
app/gallery/: page.tsx
app/landing/: layout.tsx  page.tsx
components/: AboutModal.tsx  GeminiBadge.tsx  GoogleExport.tsx  GuidedTour.tsx  ParticleBackground.tsx  TemplatePicker.tsx  VoiceInput.tsx  logo.tsx  shell.tsx  templates-index.ts  x-button.tsx
components/compare/: AutoResearchToggle.tsx  ComparePanel.tsx  CompareResults.tsx  GeminiCriticPanel.tsx  ProviderRow.tsx
components/stress-test/: BlindSpotCard.tsx  ImpactMatrix.tsx  StressTestPanel.tsx  ThinkingPath.tsx
components/ui/: GroundsDrawer.tsx  button.tsx  card.tsx  chip.tsx  input.tsx  textarea.tsx
components/visualizations/: DecisionLandscape.tsx
engine/: Cargo.toml
engine/src/: main.rs
lib/analysis/: blindSpots.ts  core.ts  crossReference.ts  halfLife.ts  index.ts  perspective.ts  probabilityMatrix.ts  readiness.ts  research.ts  stressTest.ts  stressTestTypes.ts  types.ts
lib/gallery/: storage.ts  types.ts
lib/ledger/: storage.ts  types.ts
lib/prompts/: devilAdvocate.ts
lib/providers/: google.ts  groq.ts  index.ts  openai.ts  openrouter.ts  types.ts
report/: report.py  template.html.j2
rust/score_engine/: Cargo.toml
rust/score_engine/pkg/: package.json  score_engine.d.ts  score_engine.js  score_engine_bg.wasm  score_engine_bg.wasm.d.ts
rust/score_engine/src/: lib.rs  wasm.rs
sample/: ledger.json
scripts/: report-from-json.ts
(+13 files in other folders)
